Fixes paragraph text spilling over its container.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -117,6 +117,9 @@ body {
 .orange {
   color: $orange;
 }
+p {
+  overflow: auto;
+}
 .pointer {
   cursor: pointer;
 }
